# data-structures-and-algorithm-in-c

./: .gitignore  CMakeLists.txt  LICENSE  README.md  list.c  list.h  main.c
include/: array_queue.h  array_stack.h  list_queue.h  list_stack.h  tree.h
includes/: fatal.h
lib/: list.c
src/: CMakeLists.txt  list.c
src/list/: CMakeLists.txt
src/queue/: CMakeLists.txt  array_queue.c  list_queue.c
src/stack/: CMakeLists.txt  array_stack.c  list_stack.c
src/tree/: tree.c
tests/: CMakeLists.txt  array_queue_test.c  array_stack_test.c  big_number_sum_test.c  list_queue_test.c  list_stack_test.c
